# kpsf

./: .gitignore  .gitmodules  CMakeLists.txt  Initialization.ipynb  Makefile  README.md  blurgh.py  generate_all_mog.py  kepler_test.py  mog.py  setup.py  test.cc  test.py  test2.py
cmake/: FindGflags.cmake  FindGlog.cmake
data/: kplr07.4_2011265_prf.mog.fits  pointing_model.fits
include/: image.h  psf.h
kpsf/: __init__.py  _kpsf.pyx  c3k.py  constants.h  data.py  frame.py  kpsf.cc  kpsf.h  model.h  model.py  psf.h  psf.py  residual.h  time_series.py
python/: CMakeLists.txt  setup.py.in
python/kpsf/: __init__.py  __init__.py.in  _kpsf.cc  kpsf.py  model.py
scripts/: generate_fake_data.py
src/: CMakeLists.txt  demo.cc  gaussian.h  image.h  kpsf.c  kpsf.cc  kpsf.h  kpsf.h.in  model.h  model.hpp  mog.cc  pixel_residual.h  prf.h  prf.hpp  psf.h  residual.h  residuals.h  solver.cc  solver.h  tpf.h
